# vectrex-cart

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  main.rs  memory.x  openocd.gdb
.cargo/: config
multicart/: Makefile  multicart.asm
src/: main.rs  stm32f407.rs
