[package]
authors = ["Björn Weinehall <gecko@acc.umu.se>"]
edition = "2018"
readme = "README.md"
name = "stm-test"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-semihosting = "*"
volatile-register = "*"

#[dependencies.stm32f4]
#version = "0.7.1"
#features = ["stm32f407", "rt"]

#[dependencies.stm32f4xx-hal]
#version = "0.5.0"
#features = ["stm32f407"]

[dependencies.embedded-hal]
version = "=0.2.2"

[dependencies.stm32f407g-disc]
version = "0.3.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# this lets you use `cargo fix`!
[[bin]]
name = "stm-test"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
